2001-07-17  Sean MacIsaac  <macisaac@ximian.com>

	* ByNamespace.xsl: removed bug for improper handling of namespace.
	eg System.Collections.Blah was showing up in System list.

2001-07-16  Sean MacIsaac  <macisaac@ximian.com>

	* ByNamespace.xsl: Needed by ByNamespace.cs.

	* ByNamespace.cs: Generates html by namespace..

	* ByMaintainer.xsl: Needed by ByMaintainer.cs.

	* ByMaintainer.cs: Generates html by maintainer.

	* class.xml: Class maintainers go here.
	
	* maintainers.xml: Only maintaining email/name pairs here.

	* compare-assembly.cs: Started refactoring to give what Migee
	wants.