@@ -32,5 +32,6 @@
     <person name="Leen Toelen" email="toelen@hotmail.com"/>
     <person name="Chris Podurgiel" email="cpodurgiel@msn.com"/>
     <person name="Stefan Maierhofer" email="sm@cg.tuwien.ac.at"/>
+    <person email="dick@ximian.com" name="Dick Porter"/>
 </maintainers>
 
